# advent-of-code-2020

./: README.md
F#/: .editorconfig  AOC2020.sln  F#.sln  README.md
F#/src/1/: 1.fsproj  Program.fs
F#/src/10/: 10.fsproj  Program.fs
F#/src/11/: 11.fsproj  Program.fs
F#/src/12/: 12.fsproj  Program.fs
F#/src/13/: 13.fsproj  Program.fs
F#/src/14/: 14.fsproj  Program.fs
F#/src/15/: 15.fsproj  Program.fs
F#/src/16/: 16.fsproj  Program.fs
F#/src/17/: 17.fsproj  Program.fs
F#/src/2/: 2.fsproj  Program.fs
F#/src/3/: 3.fsproj  Program.fs
F#/src/4/: 4.fsproj  Program.fs
F#/src/5/: 5.fsproj  Program.fs
F#/src/6/: 6.fsproj  Program.fs
F#/src/7/: 7.fsproj  Program.fs
F#/src/8/: 8.fsproj  Program.fs
F#/src/9/: 9.fsproj  Program.fs
F#/src/Common/: ActivePatterns.fs  Common.fsproj
haskell/: Main.hs  README.md  haskell.cabal  package.yaml  stack.yaml
haskell/src/: 1.hs  Helpers.hs  Main.hs  Task1.hs  Task2.hs  Task3.hs
