cabal-version:      2.4
name:               haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mateusz Koteja
maintainer:         mateusz.koteja@leocode.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

executable haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Helpers
      Task1
      Task2
      Task3

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base ^>=4.14.1.0
      ,combinatorial
      ,mtl
      ,parsec
    hs-source-dirs:   src
    default-language: Haskell2010
